# parallel-delaunay

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  conda_env.yml  pyproject.toml  requirements.txt  scipi_comparison.py  triangulation_benchmarks.py  triangulation_mpi_test.py
delaunay-triangulation/linear-algebra/: linear_algebra.py
delaunay_triangulation/: triangulation_cli.py  triangulation_mpi.py  triangulation_mpi_test.py  triangulation_test.py
delaunay_triangulation/points_tools/: generate_values.py
delaunay_triangulation/triangulation_core/: edge_topology.py  triangulation.py  triangulation_primitives.py
delaunay_triangulation/triangulation_core/linear_algebra/: linear_algebra.py
delaunay_triangulation/triangulation_core/points_tools/: generate_values.py  split_list.py
parallel-delaunay/: triangulation_benchmarks.py  triangulation_mpi_test.py  triangulation_test.py
parallel-delaunay/triangulation_core/: edge_topology.py  linear_algebra.py  triangulation.py  triangulation_primitives.py
parallel-delaunay/triangulation_core/points_tools/: generate_values.py  split_list.py
paralleldelaunay/triangulation_core/: edge_topology.py  linear_algebra.py  triangulation.py  triangulation_primitives.py
paralleldelaunay/triangulation_core/points_tools/: generate_values.py
src/: triangulation_benchmarks.py  triangulation_cli.py  triangulation_mpi_test.py  triangulation_test.py
src/triangulation_core/: edge_topology.py  linear_algebra.py  triangulation.py  triangulation_primitives.py
src/utilities/: settings.py
(+2 files in other folders)
