[tool.poetry]
name = "parallel-delaunay"
version = "1.0.0"
description = "Parallel implementation of Guibas & Stolfi's divide-and-conquer algorithm for Delaunay triangulation, using MPI in Python."
authors = ["v-hill <67915924+v-hill@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "paralleldelaunay" }
]
repository = "https://github.com/v-hill/parallel-delaunay"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
matplotlib = "^3.6.2"
mpi4py = "^3.1.4"
numpy = "^1.23.5"
scipy = "^1.10.0"

[tool.poetry.group.dev.dependencies]
black = "*"
pre-commit = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools]
name = "paralleldelaunay" # set the package name for importing